Updating to Inversion 0.12.x compatibility